# derp

./: .gitignore  .gitmodules  CMakeLists.txt  DBuildFile  LICENSE  Makefile  README  README.md  build.d  compile.d
data/: Resources.md  teamonkey.3ds  teamonkey.blend  teamonkey.dae
derp/: CMakeLists.txt  all.d  app.d  fs.d  resources.d  scene.d
derp/audio/: all.d  buffer.d  data.d  source.d  util.d
derp/core/: all.d  app.d  fs.d  geo.d  input.d  resources.d  scene.d  shapes.d
derp/graphics/: all.d  camera.d  draw.d  drawable.d  light.d  mesh.d  polygon.d  render.d  shader.d  sprite.d  text.d  texture.d  util.d  vertexbuffer.d  vertexdata.d  view.d  window.d
derp/math/: all.d  angle.d  matrix.d  quaternion.d  vector.d
derper/: CMakeLists.txt  loader.d  main.d  rc.d
herpderp/: CMakeLists.txt  main.d
test/: CMakeLists.txt  derp.lua  double_file  main.lua  simple_text.txt
test/src/: all.d  geo.d  resource_cache.d  resources.d
