CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_D_USE_PHOBOS TRUE)
INCLUDE(UseDDoc)

PROJECT(derp D)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(
    ${CMAKE_BINARY_DIR}
    ${CMAKE_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/externals/LuaD/
    ${PROJECT_SOURCE_DIR}/externals/orange/
    ${PROJECT_SOURCE_DIR}/externals/Derelict3/import/
    ${PROJECT_SOURCE_DIR}/externals/gl3n/import/
)

LINK_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}/externals/LuaD/lib/
    ${PROJECT_SOURCE_DIR}/externals/orange/lib/64/
    ${PROJECT_SOURCE_DIR}/externals/orange/lib/32/
    ${PROJECT_SOURCE_DIR}/externals/Derelict3/lib/
    ${PROJECT_SOURCE_DIR}/externals/gl3n/lib/
    ${PROJECT_SOURCE_DIR}/lib/
)


ADD_SUBDIRECTORY(derp)
ADD_SUBDIRECTORY(derper)
ADD_SUBDIRECTORY(herpderp)
ADD_SUBDIRECTORY(test)
